# mlops-wine-quality

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: train.yaml
src/mlops_wine_quality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
