[project]
name = "mlops-wine-quality"
version = "0.1.0"
description = "Minimal end-to-end MLOps pipeline for Wine Quality regression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "mlflow>=2.10.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.1",
  "requests>=2.31.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
fix = true
